# newsAi

./: .env.example  .gitignore  README.md  minimax-hidden-voices.md  pyproject.toml  run_daily.py
channels/ai-invest/: channel.yaml  sources.yaml
channels/ai-invest/prompts/: curate.system.md  script.system.md
channels/cn-finance/: channel.yaml  sources.yaml
channels/cn-finance/prompts/: curate.system.md  script.system.md
core/: channel.py  config.py  llm.py  logging.py  models.py  tts.py
docs/plans/: 2026-05-12-ai-news-podcast.md
docs/specs/: 2026-05-12-ai-news-podcast-design.md
pipelines/: cover.py  curate.py  ingest.py  notify.py  publish.py  render_html.py  render_video.py  script.py
prompts/: curate.system.md  script.system.md
scripts/: install_schedule.ps1  start_dashboard.bat
templates/: _card.html.j2  index.html.j2  styles.css
tests/: test_channel.py  test_config.py  test_cover.py  test_curate.py  test_ingest.py  test_llm.py  test_models.py  test_notify.py  test_publish.py  test_render_html.py  test_render_video.py  test_run_daily.py  test_script.py  test_tts.py  test_web.py
tests/fixtures/: curated_sample.json  raw_sample.json  sample_rss.xml  sample_sources.yaml  segments_sample.json
web/: __init__.py  episodes.py  main.py  runs.py  sources_api.py  stats.py
web/static/: styles.css
web/templates/: episode.html  index.html
