[project]
name = "news-ai"
version = "0.1.0"
description = "Daily AI investment news podcast generator"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.11",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.4",
    "playwright>=1.45.0",
    "ffmpeg-python>=0.2.0",
    "structlog>=24.4.0",
    "rapidfuzz>=3.9.0",
    "python-dateutil>=2.9.0",
    "win10toast>=0.9; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["core*", "pipelines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
